# game-engine

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakeListsVcpkg.txt  CMakePresets.json  README.md  imgui.ini  mygame.cpp  vcpkg-configuration.json  vcpkg.json
shaders/: depth.vert  input_structures.glsl  mesh.frag  mesh.vert  mesh_structures.glsl  outline.frag  outline.vert  scene.glsl  shader.frag  shader.vert  shadow.glsl  shadow.vert  stencil.frag  stencil.vert  tex_image.frag  tile.frag  tile.vert  tile_structures.glsl
src/: camera.cpp  camera.h  file.cpp  file.h  game.cpp  game.h  input.cpp  input.h  main.cpp  main.h  memory.cpp  memory.h  renderer.cpp  renderer.hpp  renderer_test.cpp  test.cpp  tile.cpp  tile.h  vulkan_test.cpp
src/math/: aabb.h  global-axis.h  intersection.cpp  intersection.h  transform.cpp  transform.h
src/renderer/: bootstrap.cpp  bootstrap.h  config.cpp  config.h  context.cpp  context.hpp  descriptor.cpp  descriptor.h  frustum_culling.cpp  frustum_culling.h  image.cpp  image.h  init.cpp  init.h  loader.cpp  loader.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.hpp  scene.cpp  scene.h  tile.cpp  tile.h  types.h  unit.h  vertex.h
src/renderer/pipelines/: builder.cpp  builder.h  depth_pass.cpp  depth_pass.h  mesh.cpp  mesh.h  tile.cpp  tile.h
